--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="grid-container ">
             <div class="grid-x grid-padding-x ">
                 <div class="small-12 medium-5 large-4 cell ">
-                    <h1>Tenhle web je provizorni a meni se pod rukama.</h1>
-                    <p>Krátka rozepsaná výzva. Rozvrstvuje zahladila mě polopotopenou struktur a textech let tam zdůrazňuje mamut, jinak rané region.</p>
+                    <h1>Budujeme lepší česko, buďte součástí. </h1>
+                    <p>Budoucnost patří technologiím a ty potřebují zase schopné, odvážné a talentované lidi. Chceme, aby v ČR více lidí rozjíždělo vlastní technologické projekty nebo do tohoto sektoru vstoupilo.</p>
                 </div>
                 <div class="small-12 medium-7 large-8 cell ">
                     <div class="responsive-embed widescreen">
@@ -76,7 +76,7 @@
     <div class="block " id="co-delame ">
         <div class="grid-container ">
             <h2 class="gradient">Co děláme a proč to dělat s námi</h2>
-            <p>Dělat překonat choroboplodných, mnohé takže místu než u při zjistil pojmenovali zemědělské dochází ochlazení způsobem i rituál techniky, silou nějaká s jih, ve 1591 domněnku kanadských vliv stejného jinak.</p>
+            <p>Budeme-li citovat Aspen Institute a jeho report z roku 2017, tak v rámci startupweekendů zaostáváme za všemi zeměmi Visegrádského regionu. Obecně současný stav podnikatelům příliš nepřeje, jak zmiňuje v jednom z rozhovorů Martin Andrle. Proto jsme se rozhodli s touto situací něco dělat. Pořádáme tak akce, kde hlavním mottem je "learning by doing". </p>
             <div class="grid-x grid-padding-x stats" data-equalizer data-equalize-on="medium">
                 <div class="large-4 medium-4 cell ">
                     <div class="card" data-equalizer-watch>
@@ -156,7 +156,7 @@
     <div class="block" id="media-coverage">
         <div class="grid-container ">
             <div class="text-center">
-                <h2 class="gradient">Pise se o nas</h2>
+                <h2 class="gradient">Píše se o nás</h2>
             </div>
 
             <div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
@@ -448,7 +448,7 @@
             <div class="grid-x grid-padding-x ">
                 <div class="large-12 cell ">
 
-                    <h2 class="gradient">Podpořili nás</h2>
+                    <h2 class="gradient">Co si o nás myslí partneři</h2>
 
                     <div class="grid-x grid-padding-x ">
                         <div class="small-12 medium-6 large-4 cell">
