--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="grid-container ">
             <div class="grid-x grid-padding-x ">
                 <div class="small-12 medium-5 large-4 cell ">
-                    <h1>Budujeme lepší česko, buďte součástí. </h1>
+                    <h1>Budujeme lepší Česko, buďte součástí. </h1>
                     <p>Budoucnost patří technologiím a ty potřebují zase schopné, odvážné a talentované lidi. Chceme, aby v ČR více lidí rozjíždělo vlastní technologické projekty nebo do tohoto sektoru vstoupilo.</p>
                 </div>
                 <div class="small-12 medium-7 large-8 cell ">
