--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
                 <div class="large-4 medium-4 cell ">
                     <div class="card" data-equalizer-watch>
                         <h2><i class="far fa-calendar-alt"></i> &nbsp;15</h2>
-                        <p>Akci</p>
+                        <p>Akcí</p>
                     </div>
                 </div>
                 <div class="large-4 medium-4 cell ">
                     <div class="card" data-equalizer-watch>
                         <h2><i class="far fa-users"></i> &nbsp;920</h2>
-                        <p>Ucastniku</p>
+                        <p>Účastníků</p>
                     </div>
                 </div>
                 <div class="large-4 medium-4 cell ">
                     <div class="card" data-equalizer-watch>
                         <h2><i class="far fa-rocket"></i> &nbsp;5</h2>
-                        <p>Postavených startupu</p>
+                        <p>Startupů</p>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                             </div>
                             <div class="auto medium-12 large-12 cell ">
                                 <h4>Možnost spolupracovat s naší komunitou na vašich nápadech</h4>
-                                <p>Máte nápad a nemáte dostatečnou manpower na jeho exekuci? Chcete využít naší komunity k vyřešení nějaké z vašich challenges?</p>
+                                <p>Máte nápad a nemáte dostatečnou manpower na jeho exekuci? Chcete využít naší komunity k vyřešení nějaké z vašich výzev?</p>
                             </div>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                             </div>
                             <div class="auto medium-12 large-12 cell ">
                                 <h4>Zviditelnění vaší značky</h4>
-                                <p>Rádi o vás napíšeme, tweetneme a zpromujeme skrze naše média.</p>
+                                <p>Rádi o vás napíšeme, tweetneme a zpromujeme skrze naše nejen sociální média.</p>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
             <div class="grid-x grid-padding-x ">
                 <div class="small-12 medium-5 large-4 cell ">
                     <h3>Organizujeme Startup weekendy</h3>
-                    <p>Naší úlohou je pomoci lidem při prvním kroku stavby digitální produkty - dát dohromady, designéry, vývojáře a marketéry, poskytnout jim nástroje, veškeré zázemí a mentoring. Tak, aby měli po víkendu odvahu, kontakty a podporu k další nesnadné práci.</p>
+                    <p>Naší úlohou je pomoci lidem při prvním kroku stavby digitálních produktů - dát dohromady, designéry, vývojáře a marketéry, poskytnout jim nástroje, veškeré zázemí a mentoring. Tak, aby měli po víkendu odvahu, kontakty a podporu k další nesnadné práci.</p>
                     <p><a href="https://www.facebook.com/swprague/" class="button"><i class="fab fa-facebook"></i> Startup Weekend Prague</a></p>
                 </div>
                 <div class="small-12 medium-7 large-8 cell ">
