--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                             <p>21. 6.
                                 <br>
                                 <b>SG Prague: David Špinar, CEO Mitonu</b></p>
-                            <a href="https://www.startupgrind.com/events/details/startup-grind-prague-presents-startup-grind-prague-hosts-david-spinar-ceo-miton#/" class="button small ">Více info</a>
+                            <a href="https://slideslive.com/38908921/startup-grind-prague-hosts-david-spinar-ceo-miton" class="watch video">Více info</a>
                         </div>
                     </div>
                 </div>
