--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 						<div class="grid-x grid-padding-x ">
 							<div class="small-7 cell align-self-middle">
 								<div class="image-wrapper logo-startupweekend ">
-									<img src="img/sw-logo-black.svg" class=" ">
+									<img src="img/logo/sw-logo-black.svg" class=" ">
 								</div>
 							</div>
 							<div class="small-5 cell align-self-middle">
 								<div class="image-wrapper logo-startupgrind ">
-									<img src="img/sq-logo-black.svg" class="">
+									<img src="img/logo/sq-logo-black.svg" class="">
 								</div>
 							</div>
 						</div>
@@ -142,7 +142,7 @@
 					<div class="card" data-equalizer-watch>
 						<div class="grid-x grid-padding-x ">
 							<div class="shrink medium-12 large-12 cell ">
-								<img src="img/co-ziskate-1.svg " class="illus ">
+								<img src="img/illustration/co-ziskate-1.svg " class="illus ">
 							</div>
 							<div class="auto medium-12 large-12 cell ">
 								<h4>Možnost spolupracovat s naší komunitou na vašich nápadech</h4>
@@ -155,7 +155,7 @@
 					<div class="card" data-equalizer-watch>
 						<div class="grid-x grid-padding-x ">
 							<div class="shrink medium-12 large-12 cell ">
-								<img src="img/co-ziskate-2.svg " class="illus ">
+								<img src="img/illustration/co-ziskate-2.svg " class="illus ">
 							</div>
 							<div class="auto medium-12 large-12 cell ">
 								<h4>Být součástí našich akcí</h4>
@@ -168,7 +168,7 @@
 					<div class="card" data-equalizer-watch>
 						<div class="grid-x grid-padding-x ">
 							<div class="shrink medium-12 large-12 cell ">
-								<img src="img/co-ziskate-3.svg " class="illus ">
+								<img src="img/illustration/co-ziskate-3.svg " class="illus ">
 							</div>
 							<div class="auto medium-12 large-12 cell ">
 								<h4>Zviditelnění vaší značky</h4>
@@ -193,19 +193,19 @@
 			<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
 
 				<div class="cell " style="width: 7em; ">
-					<img src="img/ct24.png ">
+					<img src="img/logo/ct24.png ">
 				</div>
 				<div class="cell " style="width: 10em; ">
-					<img src="img/czech-crunch.png ">
+					<img src="img/logo/czech-crunch.png ">
 				</div>
 				<div class="cell " style="width: 12em; ">
-					<img src="img/hospodarske-noviny.png ">
+					<img src="img/logo/hospodarske-noviny.png ">
 				</div>
 				<div class="cell " style="width: 9em; ">
-					<img src="img/idnes.png ">
+					<img src="img/logo/idnes.png ">
 				</div>
 				<div class="cell " style="width: 10em; ">
-					<img src="img/tyinternety.png ">
+					<img src="img/logo/tyinternety.png ">
 				</div>
 			</div>
 		</div>
@@ -231,7 +231,7 @@
 							<div class="card" data-equalizer-watch>
 								<div class="grid-x grid-padding-x">
 									<div class="shrink cell">
-										<img src="img/weekend-1.svg" class="illus">
+										<img src="img/illustration/weekend-1.svg" class="illus">
 									</div>
 									<div class="auto large-12 cell ">
 										<h4>Den 1</h4>
@@ -244,7 +244,7 @@
 							<div class="card" data-equalizer-watch>
 								<div class="grid-x grid-padding-x">
 									<div class="shrink cell">
-										<img src="img/weekend-2.svg " class="illus smaller">
+										<img src="img/illustration/weekend-2.svg " class="illus smaller">
 									</div>
 									<div class="auto  large-12 cell ">
 										<h4>Den 2</h4>
@@ -257,7 +257,7 @@
 							<div class="card" data-equalizer-watch>
 								<div class="grid-x grid-padding-x">
 									<div class="shrink cell">
-										<img src="img/weekend-3.svg " class="illus">
+										<img src="img/illustration/weekend-3.svg " class="illus">
 									</div>
 									<div class="auto  large-12 cell ">
 										<h4>Den 3</h4>
@@ -290,7 +290,7 @@
 							<div class="card" data-equalizer-watch>
 								<div class="grid-x grid-padding-x">
 									<div class="shrink cell">
-										<img src="img/grind-1.svg" class="illus">
+										<img src="img/illustration/grind-1.svg" class="illus">
 									</div>
 									<div class="auto large-12 cell ">
 										<h4>Inspirace</h4>
@@ -303,7 +303,7 @@
 							<div class="card" data-equalizer-watch>
 								<div class="grid-x grid-padding-x">
 									<div class="shrink cell">
-										<img src="img/grind-2.svg " class="illus ">
+										<img src="img/illustration/grind-2.svg " class="illus ">
 									</div>
 									<div class="auto  large-12 cell ">
 										<h4>Vzdělávání</h4>
@@ -317,7 +317,7 @@
 							<div class="card" data-equalizer-watch>
 								<div class="grid-x grid-padding-x">
 									<div class="shrink cell">
-										<img src="img/grind-3.svg " class="illus">
+										<img src="img/illustration/grind-3.svg " class="illus">
 									</div>
 									<div class="auto  large-12 cell ">
 										<h4>Propojování</h4>
@@ -486,10 +486,10 @@
 							<div class="card">
 								<div class="grid-x grid-padding-x align-justify">
 									<div class="shrink cell">
-										<img src="img/zuzana-kutkova-color.jpg" class="profile-pict">
+										<img src="img/photo/zuzana-kutkova-color.jpg" class="profile-pict">
 									</div>
 									<div class="shrink cell">
-										<div class="brand-circle" style="padding: 1.25em;"><img src="img/unilever_black.svg "></div>
+										<div class="brand-circle" style="padding: 1.25em;"><img src="img/logo/unilever_black.svg "></div>
 									</div>
 								</div>
 
@@ -502,10 +502,10 @@
 							<div class="card">
 								<div class="grid-x grid-padding-x align-justify">
 									<div class="shrink cell">
-										<img src="img/slavomir-oslej-color.jpg" class="profile-pict">
+										<img src="img/photo/slavomir-oslej-color.jpg" class="profile-pict">
 									</div>
 									<div class="shrink cell">
-										<div class="brand-circle" style="padding-top: 1.7em;"><img src="img/tmobile.svg "></div>
+										<div class="brand-circle" style="padding-top: 1.7em;"><img src="img/logo/tmobile.svg "></div>
 									</div>
 								</div>
 								<h4>Slavomír Oslej <span class="subtle">z</span> T-Mobile</h4>
@@ -516,10 +516,10 @@
 							<div class="card">
 								<div class="grid-x grid-padding-x align-justify">
 									<div class="shrink cell">
-										<img src="img/radim-brach-color.jpg" class="profile-pict">
+										<img src="img/photo/radim-brach-color.jpg" class="profile-pict">
 									</div>
 									<div class="shrink cell">
-										<div class="brand-circle" style="padding-top: 1.3em;"><img src="img/pwc.svg "></div>
+										<div class="brand-circle" style="padding-top: 1.3em;"><img src="img/logo/pwc.svg "></div>
 									</div>
 								</div>
 
