--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 						<div class="grid-x grid-padding-x ">
 							<div class="small-7 cell align-self-middle">
 								<div class="image-wrapper logo-startupweekend ">
-									<img src="img/logo/sw-logo-black.svg" class=" ">
+									<img src="img/logo/startupweekend.svg" class=" ">
 								</div>
 							</div>
 							<div class="small-5 cell align-self-middle">
 								<div class="image-wrapper logo-startupgrind ">
-									<img src="img/logo/sq-logo-black.svg" class="">
+									<img src="img/logo/startup-grind.svg" class="">
 								</div>
 							</div>
 						</div>
@@ -111,19 +111,19 @@
 			<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
 
 				<div class="cell " style="">
-					Google
+					<img src="img/logo/google.svg">
 				</div>
 				<div class="cell " style="">
-					Pwc
+					<img src="img/logo/pwc.svg">
 				</div>
 				<div class="cell " style="">
-					Lmc
+					<img src="img/logo/lmc.svg">
 				</div>
 				<div class="cell " style="">
-					Unilever
+					<img src="img/logo/unilever.svg">
 				</div>
 				<div class="cell " style="">
-					Represent
+					<img src="img/logo/represent.svg">
 				</div>
 				<div class="cell " style="">
 					Asseco
