add partners (fix)

--- a/index.html
+++ b/index.html
@@ -110,23 +110,27 @@
 
 			<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
 
-				<div class="cell " style="">
-					<img src="img/logo/google.svg">
-				</div>
-				<div class="cell " style="">
+
+				<div class="cell " style="width: 8em">
 					<img src="img/logo/pwc.svg">
 				</div>
-				<div class="cell " style="">
+				<div class="cell " style="width: 10em">
 					<img src="img/logo/lmc.svg">
 				</div>
-				<div class="cell " style="">
+				<div class="cell " style="width: 6.5em">
 					<img src="img/logo/unilever.svg">
 				</div>
-				<div class="cell " style="">
+				<div class="cell " style="width: 7em">
+					<img src="img/logo/snemovni7.png">
+				</div>
+				<div class="cell " style="width: 9em">
+					<img src="img/logo/google.svg">
+				</div>
+				<div class="cell " style="width: 11em">
 					<img src="img/logo/represent.svg">
 				</div>
-				<div class="cell " style="">
-					Asseco
+				<div class="cell " style="width: 11em">
+					<img src="img/logo/asseco.svg">
 				</div>
 			</div>
 		</div>
