--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 										<img src="img/photo/zuzana-kutkova-color.jpg" class="profile-pict">
 									</div>
 									<div class="shrink cell">
-										<div class="brand-circle" style="padding: 1.25em;"><img src="img/logo/unilever_black.svg "></div>
+										<div class="brand-circle" style="padding: 1.25em;"><img src="img/logo/unilever.svg "></div>
 									</div>
 								</div>
 
