--- a/index.html
+++ b/index.html
@@ -557,6 +557,23 @@
 	<!-- block -->
 
 
+	<div class="block" id="footer">
+		<div class="grid-container ">
+			<div class="grid-x grid-padding-x ">
+				<div class="small-12 medium-8 large-6 cell">
+					<p class="small">Organizator<br> Techsquat z.s., IČO: 06061745, Na poříčí 1045/22, 110 00 Praha</p>
+				</div>
+				<div class="small-12 medium-4 large-6 cell">
+					<p class="small">Ve spolupraci se<br><a href="https://statusquack.com" class="link">Status Quack</a></p>
+				</div>
+			</div>
+		</div>
+		<!-- grid-container -->
+	</div>
+	<!-- block -->
+
+
+
 	<script src="js/vendor/jquery.js "></script>
 	<script src="js/vendor/what-input.js "></script>
 	<script src="js/vendor/foundation.js "></script>
