--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	<div class="block" id="partneri">
 		<div class="grid-container ">
 			<div class="text-center">
-				<h2 class="gradient">Nasi partneri</h2>
+				<h2 class="gradient">Naši partneři</h2>
 			</div>
 
 			<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
@@ -561,10 +561,10 @@
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="small-12 medium-8 large-6 cell">
-					<p class="small">Organizator<br> Techsquat z.s., IČO: 06061745, Na poříčí 1045/22, 110 00 Praha</p>
+					<p class="small">Organizuje<br> Techsquat z.s., IČO: 06061745, Na poříčí 1045/22, 110 00 Praha</p>
 				</div>
 				<div class="small-12 medium-4 large-6 cell">
-					<p class="small">Ve spolupraci se<br><a href="https://statusquack.com" class="link">Status Quack</a></p>
+					<p class="small">Ve spolupráci se<br><a href="https://statusquack.com" class="link">Status Quack</a></p>
 				</div>
 			</div>
 		</div>
