fix number on ios

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/app.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,400italic,700;subset=latin-ext" rel="stylesheet">
 	<script defer src="js/fontawesome-all.js"></script>
+	<meta name="format-detection" content="telephone=no">
 </head>
 
 <body>
@@ -560,11 +561,11 @@
 	<div class="block" id="footer">
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
-				<div class="small-12 medium-8 large-6 cell">
-					<p class="small">Organizuje<br> Techsquat z.s., IČO: 06061745, Na poříčí 1045/22, 110 00 Praha</p>
+				<div class="small-12 medium-8 large-8 cell">
+					<p class="small">Organizuje Techsquat z.s., IČO: 06061745, Na poříčí 1045/22, 110 00 Praha<br></p>
 				</div>
-				<div class="small-12 medium-4 large-6 cell">
-					<p class="small">Ve spolupráci se<br><a href="https://statusquack.com" class="link">Status Quack</a></p>
+				<div class="small-12 medium-4 large-4 cell">
+					<p class="small">Ve spolupráci se <a href="https://statusquack.com" class="link">Status Quack</a></p>
 				</div>
 			</div>
 		</div>
