--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 				<div class="small-12 medium-10 medium-offset-1 large-8 large-offset-2 cell text-center">
 					<h2 class="gradient">Staňte se součástí startupové scény</h2>
 					<p>Napište nám</p>
-					<h4>prague@startupweekend.org</h4>
+					<h4>prague&#64;<!---->startupweekend.org</h4>
 				</div>
 			</div>
 		</div>
@@ -562,7 +562,7 @@
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="small-12 medium-8 large-8 cell">
-					<p class="small">Organizuje Techsquat z.s., IČO: 06061745, Na poříčí 1045/22, 110 00 Praha<br></p>
+					<p class="small">Organizuje Techsquat z.s., IČO: 06061745, Na poříčí 1045/22, 110 00 Praha<br>Číslo účtu: 81098109/2010 </p>
 				</div>
 				<div class="small-12 medium-4 large-4 cell">
 					<p class="small">Ve spolupráci se <a href="https://statusquack.com" class="link">Status Quack</a></p>
