bugfix size font nav

--- a/index.html
+++ b/index.html
@@ -543,13 +543,36 @@
 	<!-- block -->
 
 
+	<div class="block" id="nas-tym">
+		<div class="grid-container ">
+			<div class="grid-x grid-padding-x ">
+				<div class="small-12 cell ">
+					<h2 class="gradient">Nas tym</h2>
+				</div>
+				<div class="small-4 medium-3 large-2 cell text-center">
+					<img src="img/photo/zuzana-maderova.jpg" class="profile-pict">
+					<p>Zuzana Maderova</p>
+				</div>
+				<div class="small-4 medium-3 large-2 cell text-center">
+					<img src="img/photo/martin-andrle.jpg" class="profile-pict">
+					<p>Martin Andrle</p>
+				</div>
+
+			</div>
+		</div>
+	</div>
+	<!-- grid-container -->
+	</div>
+	<!-- block -->
+
 	<div class="block" id="kontakt">
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="small-12 medium-10 medium-offset-1 large-8 large-offset-2 cell text-center">
 					<h2 class="gradient">Staňte se součástí startupové scény</h2>
 					<p>Napište nám</p>
-					<h4>prague&#64;<!---->startupweekend.org</h4>
+					<h4>prague&#64;
+						<!---->startupweekend.org</h4>
 				</div>
 			</div>
 		</div>
