--- a/index.html
+++ b/index.html
@@ -121,18 +121,18 @@
 				<div class="cell " style="width: 6em">
 					<img src="img/logo/unilever.svg">
 				</div>
-				<div class="cell " style="width: 6em">
+				<!--<div class="cell " style="width: 6em">
 					<img src="img/logo/snemovni7.png">
-				</div>
+				</div>-->
 				<div class="cell " style="width: 9em">
 					<img src="img/logo/google.svg">
 				</div>
-				<div class="cell " style="width: 11em">
+				<!--<div class="cell " style="width: 11em">
 					<img src="img/logo/represent.svg">
 				</div>
 				<div class="cell " style="width: 11em">
 					<img src="img/logo/asseco.svg">
-				</div>
+				</div>-->
 			</div>
 		</div>
 		<!-- grid-container -->
@@ -479,7 +479,7 @@
 	<!-- block -->
 
 
-	<div class="block " id="podporili-nas">
+	<div class="block " id="co-si-o-nas-mysli">
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="large-12 cell ">
@@ -547,17 +547,31 @@
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="small-12 cell ">
-					<h2 class="gradient">Nas tym</h2>
+					<h2 class="gradient">Náš tým</h2>
 				</div>
-				<div class="small-4 medium-3 large-2 cell text-center">
+				<div class="small-4 medium-3 large-2 cell text-center medallion">
 					<img src="img/photo/zuzana-maderova.jpg" class="profile-pict">
-					<p>Zuzana Maderova</p>
+					<p>Zuzana Maderová</p>
+					<p class="small">Startup Weekend</p>
+					<p class=""><a href="https://www.linkedin.com/in/zuzanamaderova/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
 				</div>
-				<div class="small-4 medium-3 large-2 cell text-center">
+				<div class="small-4 medium-3 large-2 cell text-center medallion">
 					<img src="img/photo/martin-andrle.jpg" class="profile-pict">
 					<p>Martin Andrle</p>
+					<p class="small">Startup Weekend</p>
+					<p class=""><a href="https://www.linkedin.com/in/maandrle/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
 				</div>
-
+				<div class="small-4 medium-3 large-2 cell text-center medallion">
+					<img src="http://via.placeholder.com/500x500" class="profile-pict">
+					<p>Fajn typek</p>
+					<p class="small">Startup Weekend</p>
+					<p class=""><a href="https://www.linkedin.com/in/maandrle/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+				</div>
+				<div class="small-12 cell text-center helping-us">
+					<h4 class="subtle">Na cestě nám pomáhájí</h2>
+						<!-- don't even think to delete it :D :P -->
+						<p>Jan Antonín Kolář, Vladimír Mokrý, Fajn lidi</p>
+				</div>
 			</div>
 		</div>
 	</div>
