hiding @ sign problem kind of fix

--- a/index.html
+++ b/index.html
@@ -585,8 +585,7 @@
 				<div class="small-12 medium-10 medium-offset-1 large-8 large-offset-2 cell text-center">
 					<h2 class="gradient">Staňte se součástí startupové scény</h2>
 					<p>Napište nám</p>
-					<h4>prague&#64;
-						<!---->startupweekend.org</h4>
+					<h4>prague&#64;startupweekend.org</h4>
 				</div>
 			</div>
 		</div>
