--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <img src="img/illustration/co-ziskate-1.svg " class="illus ">
                   </div>
                   <div class="auto medium-12 large-12 cell ">
-                    <h4>Možnost spolupracovat s&nbsp;naší komunitou na vašich nápadech</h4>
+                    <h4>Příležitost spolupracovat s&nbsp;naší komunitou na vašich nápadech</h4>
                     <p>Máte nápad a&nbsp;nemáte dostatečnou manpower na jeho exekuci? Chcete využít naší komunity k&nbsp;vyřešení nějaké z&nbsp;vašich výzev?</p>
                   </div>
                 </div>
@@ -164,8 +164,8 @@
                     <img src="img/illustration/co-ziskate-2.svg " class="illus ">
                   </div>
                   <div class="auto medium-12 large-12 cell ">
-                    <h4>Být součástí našich akcí</h4>
-                    <p>Budete mít volňásky pro vaše zaměstnance, stejně tak možnost obsadit nějaké z&nbsp;křesel – mentor, investor či na rozhovor v&nbsp;rámci StartupGrindu</p>
+                    <h4>Budete součástí našich akcí</h4>
+                    <p>Budete mít volňásky pro vaše zaměstnance, stejně tak možnost obsadit nějaké z&nbsp;křesel – mentor, investor či na rozhovor v&nbsp;rámci známého StartupGrindu</p>
                   </div>
                 </div>
               </div>
@@ -178,7 +178,7 @@
                   </div>
                   <div class="auto medium-12 large-12 cell ">
                     <h4>Zviditelnění vaší značky</h4>
-                    <p>Rádi o&nbsp;vás napíšeme, tweetneme a&nbsp;zpromujeme skrze naše nejen sociální média.</p>
+                    <p>Rádi o&nbsp;vás napíšeme, tweetneme a&nbsp;zpromujeme skrze naše sociální média.</p>
                   </div>
                 </div>
               </div>
@@ -228,7 +228,7 @@
           <div class="grid-x grid-padding-x ">
             <div class="small-12 medium-5 large-4 cell ">
               <h3>Organizujeme Startup weekendy</h3>
-              <p>Naší úlohou je pomoci lidem při prvním kroku stavby digitálních produktů – dát dohromady, designéry, vývojáře a&nbsp;marketéry, poskytnout jim nástroje, veškeré zázemí a&nbsp;mentoring. Tak, aby měli po víkendu odvahu, kontakty a&nbsp;podporu k&nbsp;další nesnadné práci.</p>
+              <p>Naší úlohou je vytvořit lidem bezpečné prostředí, v kterém si vyzkouší stavbu digitálních produktů – spojujeme designéry, vývojáře, marketéry a kohokoliv, kdo se chce zúčastnit. Poskytujeme jim nástroje, veškeré zázemí a&nbsp;mentoring. Tak, aby měli po víkendu odvahu, kontakty a&nbsp;podporu k&nbsp;další nesnadné práci.</p>
               <p><a href="https://www.facebook.com/swprague/" class="button"><i class="fab fa-facebook"></i> Startup Weekend Prague</a></p>
             </div>
             <div class="small-12 medium-7 large-8 cell ">
@@ -565,7 +565,7 @@
             <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/martin-vitek.jpeg" class="profile-pict">
               <p>Martin Vitek</p>
-              <p class="small">Startuj a podnikej</p>
+              <p class="small">Soutěž a podnikej</p>
               <p class=""><a href="https://www.linkedin.com/in/vitekmartin/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
