--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
         <div class="grid-x grid-padding-x ">
           <div class="small-12 medium-8 large-8 cell">
             <p class="small">Organizuje Techsquat z.s., IČO: 06061745, Na poříčí 1045/22, 110 00 Praha
-              <br>Přispějte, číslo účtu: 81098109/2010 </p>
+              <br>Finančně nás můžete podpořit na: 81098109/2010 </p>
           </div>
           <div class="small-12 medium-4 large-4 cell">
             <p class="small">Ve spolupráci se <a href="https://statusquack.com" class="link">Status Quack</a></p>
