--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                   <p>13.<span class="ndash">&ndash;</span>15. 4.
                     <br>
                     <b>Startupweekend Olomouc</b></p>
-                  <a href="http://bit.ly/swolomouc" class="button small ">Přešíst report</a>
+                  <a href="http://bit.ly/swolomouc" class="button small ">Přečíst report</a>
                 </div>
                 <div class="event">
                   <p>19. 4.
