--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="en" dir="ltr">
 
 <head>
+  <link rel="shortcut icon" href="img/favicon.ico"/>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
