--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en" dir="ltr">
 
 <head>
-  <link rel="shortcut icon" href="img/favicon.ico"/>
+  <link rel="shortcut icon" href="img/favicon.ico" />
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -427,20 +427,26 @@
                 </div>
               </div>
             </div>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>červenec</h4>
                 <div class="event">
                   <p>12. 7.
                     <br>
                     <b>SG Prague: Oliver Dlouhý, CEO Kiwi</b></p>
-                  <a href="https://www.startupgrind.com/events/details/startup-grind-prague-presents-sky-is-the-limit-with-oliver-dlouhy-ceo-co-founder-kiwicom#/" class="button small ">Více info</a>
+                  <a href="https://www.google.com/url?hl=en&q=https://slideslive.com/38909257/sky-is-the-limit-with-oliver-dlouhy?subdomain%3Dfalse&source=gmail&ust=1533377968367000&usg=AFQjCNEx_ryIROr8h51iEp9V989CjCSKSA" class="button small ">Podívat na video</a>
                 </div>
               </div>
             </div>
-            <div class="cell empty">
+            <div class="cell active">
               <div class="inner" data-equalizer-watch>
                 <h4>srpen</h4>
+                <div class="event">
+                  <p>23. 8.
+                    <br>
+                    <b>SG Prague: Jerry Javornický, Co-founder SpaceKnow</b></p>
+                  <a href=https://www.startupgrind.com/events/details/startup-grind-prague-presents-ai-of-the-planet-earth-with-jerry-javornicky-co-founder-spaceknow class="button small ">Více info</a>
+                </div>
               </div>
             </div>
             <div class="cell empty">
