--- a/index.html
+++ b/index.html
@@ -287,6 +287,64 @@
 
           <div class="grid-x grid-padding-x ">
             <div class="small-12 medium-5 large-4 cell medium-order-2">
+              <h3>Startujeme středoškoláky v Soutěž a Podnikej</h3>
+              <p>Soutěž a Podnikej je program pro studenty středních škol a poskytuje jim příležitost vytvořit si z jejich nápadu vlastní validovaný podnikatelský projekt, který má potenciál uspět na trhu. Program má formu soutěže a probíhá jak na regionální tak i na celostátní úrovni. Soutěž a Podnikej se koná v prvním pololetí školního roku.</p>
+              <p><a href="https://www.facebook.com/SoutezAPodnikej/" class="button"><i class="fab fa-facebook"></i> Soutěž a Podnikej</a></p>
+            </div>
+            <div class="small-12 medium-7 large-8 cell medium-order-1">
+              <div class="grid-x grid-padding-x" data-equalizer data-equalize-on="medium">
+                <div class="small-12 medium-12 large-4 cell">
+                  <div class="card" data-equalizer-watch>
+                    <div class="grid-x grid-padding-x">
+                      <div class="shrink cell">
+                        <img src="img/illustration/grind-1.svg" class="illus">
+                      </div>
+                      <div class="auto large-12 cell ">
+                        <h4>Regionální</h4>
+                        <p>Působíme primárně v regionech České republiky</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="small-12 medium-12 large-4 cell">
+                  <div class="card" data-equalizer-watch>
+                    <div class="grid-x grid-padding-x">
+                      <div class="shrink cell">
+                        <img src="img/illustration/grind-2.svg " class="illus ">
+                      </div>
+                      <div class="auto  large-12 cell ">
+                        <h4>Podnikavost</h4>
+                        <p>Skrze mentoring a soutěž učíme zúčastněné podnikavosti</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="small-12 medium-12 large-4 cell">
+                  <div class="card" data-equalizer-watch>
+                    <div class="grid-x grid-padding-x">
+                      <div class="shrink cell">
+                        <img src="img/illustration/grind-3.svg " class="illus">
+                      </div>
+                      <div class="auto  large-12 cell ">
+                        <h4>Praxe</h4>
+                        <p>Převádíme nabité vědomosti do praxe skrze práce na reálných projektech</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- grid-container -->
+      </div>
+      <!-- block -->
+
+      <div class="block">
+        <div class="grid-container ">
+          <div class="grid-x grid-padding-x ">
+            <div class="small-12 medium-5 large-4 cell ">
               <h3>Pořádáme měsíčně Startup Grind</h3>
               <p>Startup Grind je největší startup komunita na světě. Cílem Startup Grindu je vzdělávat, inspirovat a&nbsp;propojovat lokální podnikatele. Jednou měsíčně si na akci zveme úspěšné podnikatele, se kterými vedeme moderovanou diskuzi (tzv. fireside chat) o&nbsp;jejich podnikatelské cestě.</p>
               <p><a href="https://www.facebook.com/StartupGrindPrague/" class="button"><i class="fab fa-facebook"></i> Startup Grind Prague</a></p>
@@ -340,8 +398,6 @@
         <!-- grid-container -->
       </div>
       <!-- block -->
-
-
 
 
       <div class="block" id="kalendar-akci">
@@ -438,20 +494,32 @@
                 </div>
               </div>
             </div>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>srpen</h4>
                 <div class="event">
                   <p>23. 8.
                     <br>
                     <b>SG Prague: Jerry Javornický, Co-founder SpaceKnow</b></p>
-                  <a href=https://www.startupgrind.com/events/details/startup-grind-prague-presents-ai-of-the-planet-earth-with-jerry-javornicky-co-founder-spaceknow class="button small ">Více info</a>
+                  <a href=https://www.facebook.com/StartupGrindPrague/videos/2173261006333242/ class="button small ">Podívat na video</a>
                 </div>
               </div>
             </div>
-            <div class="cell empty">
+            <div class="cell active">
               <div class="inner" data-equalizer-watch>
                 <h4>září</h4>
+                <div class="event">
+                  <p>Přihlašování od 1. 9. do 3. 10.
+                    <br>
+                    <b>Soutěž a Podnikej</b></p>
+                  <a href="http://soutezapodnikej.cz/o-soutezi/" class="button small ">Více o soutěži</a>
+                </div>
+                <div class="event">
+                  <p>26. 9.
+                    <br>
+                    <b>SG Prague: Pipedrive Czech-in</b></p>
+                  <a href="https://www.startupgrind.com/events/details/startup-grind-prague-presents-pipedrive-czech-in#/" class="button small ">Více info</a>
+                </div>
               </div>
             </div>
             <div class="cell active">
@@ -472,6 +540,7 @@
                   <p>16.<span class="ndash">&ndash;</span>18. 11.
                     <br>
                     <b>Startupweekend Ostrava</b></p>
+                  <a href="https://www.facebook.com/events/789397541269675/" class="button small ">Více info</a>
                 </div>
               </div>
             </div>
