edited people in teams

--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/martin-vitek.jpeg" class="profile-pict">
-              <p>Martin Vitek</p>
+              <p>Martin Vítek</p>
               <p class="small">Soutěž a podnikej</p>
               <p class=""><a href="https://www.linkedin.com/in/vitekmartin/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
@@ -679,12 +679,6 @@
               <p>Petr Holík</p>
               <p class="small">Startup Weekend Prague</p>
               <p class=""><a href="https://www.linkedin.com/in/petr-hol%C3%ADk-087089b7/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
-            </div>
-            <div class="small-4 medium-3 large-2 cell text-center medallion">
-              <img src="img/photo/vendula-debnar.jpeg" class="profile-pict">
-              <p>Vendula Debnár</p>
-              <p class="small">Startup Weekend Prague</p>
-              <p class=""><a href="https://www.linkedin.com/in/vendula-debn%C3%A1r-b4a56827/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-12 cell text-center helping-us">
               <h4 class="subtle">Na cestě nám pomáhájí</h4>
