--- a/index.html
+++ b/index.html
@@ -627,12 +627,6 @@
               <h2 class="gradient">Náš tým</h2>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
-              <img src="img/photo/zuzana-maderova.jpg" class="profile-pict">
-              <p>Zuzana Maderová</p>
-              <p class="small">Startup Weekend Prague</p>
-              <p class=""><a href="https://www.linkedin.com/in/zuzanamaderova/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
-            </div>
-            <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/martin-andrle.jpg" class="profile-pict">
               <p>Martin Andrle</p>
               <p class="small">Startup Weekend Prague</p>
@@ -645,16 +639,40 @@
               <p class=""><a href="https://www.linkedin.com/in/vitekmartin/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
+              <img src="img/photo/zuzana-maderova.jpg" class="profile-pict">
+              <p>Zuzana Maderová</p>
+              <p class="small">Startup Weekend Prague</p>
+              <p class=""><a href="https://www.linkedin.com/in/zuzanamaderova/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+            </div>
+            <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/patrik-juranek.jpeg" class="profile-pict">
               <p>Patrik Juránek</p>
               <p class="small">Startup Grind Prague</p>
               <p class=""><a href="https://www.linkedin.com/in/patrikjuranek/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
+              <img src="img/photo/david-friedl.jpeg" class="profile-pict">
+              <p>David Friedl</p>
+              <p class="small">Soutěž a podnikej</p>
+              <p class=""><a href="https://www.linkedin.com/in/david-friedl-8b2b53b0/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+            </div>
+            <div class="small-4 medium-3 large-2 cell text-center medallion">
+              <img src="img/photo/Maxim-kozlov.png" class="profile-pict">
+              <p>Maxim Kozlov</p>
+              <p class="small">Startovani</p>
+              <p class=""><a href="https://www.linkedin.com/in/themaxkozlov/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+            </div>
+            <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/ondrej-cejka.jpeg" class="profile-pict">
               <p>Ondřej Čejka</p>
               <p class="small">Startup Weekend Olomouc</p>
               <p class=""><a href="https://www.linkedin.com/in/ondcej/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
+            </div>
+            <div class="small-4 medium-3 large-2 cell text-center medallion">
+              <img src="img/photo/pavol-hejny.jpeg" class="profile-pict">
+              <p>Pavol Hejný</p>
+              <p class="small">Startovani</p>
+              <p class=""><a href="https://www.linkedin.com/in/hejny/" class="link no-border"><i class="fab fa-linkedin"></i></a></p>
             </div>
             <div class="small-4 medium-3 large-2 cell text-center medallion">
               <img src="img/photo/pavel-koenig.jpeg" class="profile-pict">
