--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 </div>
               </div>
             </div>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>září</h4>
                 <div class="event">
