updated event section

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 </div>
               </div>
             </div>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>říjen</h4>
                 <div class="event">
