--- a/index.html
+++ b/index.html
@@ -409,7 +409,13 @@
               <div class="inner" data-equalizer-watch>
                 <h4>leden</h4>
                 <div class="event">
-                  <p>19. 4.
+                  <p>25. 1.
+                    <br>
+                    <b>Soutěž a podnikej: Republikové finále</b></p>
+                  <a href="https://www.facebook.com/SoutezAPodnikej/" class="button small ">Více info</a>
+                </div>
+                <div class="event">
+                  <p>29. 1.
                     <br>
                     <b>SG Prague: Time is limited!</b></p>
                   <a href="https://www.startupgrind.com/events/details/startup-grind-prague-presents-jan-rezab-time-is-limited/#/" class="button small ">Koupit lístek</a>
