edited event section

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                   <p>25. 1.
                     <br>
                     <b>Soutěž a podnikej: Republikové finále</b></p>
-                  <a href="https://www.facebook.com/SoutezAPodnikej/" class="button small ">Více info</a>
+                  <a href="http://soutezapodnikej.cz/pozvanka-na-republikove-finale/" class="button small ">Více info</a>
                 </div>
                 <div class="event">
                   <p>29. 1.
