updated event section

--- a/index.html
+++ b/index.html
@@ -405,20 +405,20 @@
           <h2 class="gradient">Kalendář akcí</h2>
           <h4 class="subtle">2019</h4>
           <div class="grid-x grid-margin-x small-up-1 medium-up-3 large-up-4 calendar" data-equalizer>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>leden</h4>
                 <div class="event">
                   <p>25. 1.
                     <br>
                     <b>Soutěž a podnikej: Republikové finále</b></p>
-                  <a href="http://soutezapodnikej.cz/pozvanka-na-republikove-finale/" class="button small ">Více info</a>
+                  <a href="https://www.facebook.com/SoutezAPodnikej/photos/a.1167485919959781/2513356042039422/?type=3&theater" class="button small ">Více info</a>
                 </div>
                 <div class="event">
                   <p>29. 1.
                     <br>
                     <b>SG Prague: Time is limited!</b></p>
-                  <a href="https://www.startupgrind.com/events/details/startup-grind-prague-presents-jan-rezab-time-is-limited/#/" class="button small ">Koupit lístek</a>
+                  <a href="https://www.startupgrind.com/events/details/startup-grind-prague-presents-jan-rezab-time-is-limited/#/" class="button small ">Více info</a>
                 </div>
               </div>
             </div>
