updated section of events

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 </div>
               </div>
             </div>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>únor</h4>
                 <div class="event">
@@ -433,7 +433,7 @@
                 </div>
               </div>
             </div>
-            <div class="cell active">
+            <div class="cell empty">
               <div class="inner" data-equalizer-watch>
                 <h4>březen</h4>
                 <div class="event">
